runtime/tests/snapshots/adze_document_json__adze_document_json_multiline_diagnostic.snap
---
source: runtime/tests/adze_document_json.rs
expression: "serde_json::to_string_pretty(&snapshot_json).expect(\"multiline diagnostic JSON summary should render as pretty JSON\")"
---
{
  "schema": "adze.document.v1",
  "source": {
    "byte_len": 5
  },
  "language": {
    "name": "typed_ast_contract"
  },
  "root_has_error": true,
  "first_diagnostic": {
    "start_byte": 4,
    "end_byte": 5,
    "point_range": {
      "start": {
        "row": 1,
        "column": 0
      },
      "end": {
        "row": 1,
        "column": 1
      }
    },
    "expected": [
      "/\\d+/"
    ],
    "related_nodes": [
      1
    ]
  }
}
